OWASP-Driven-Threat-Detector/Builder-server/EKS/service.yaml
# Exposes FastAPI backend to the internet via a LoadBalancer
apiVersion: v1
kind: Service
metadata:
 name: threatgpt-service
 labels:
  app: threatgpt-app
spec:
 type: ClusterIP
 ports:
  - protocol: TCP
    port: 80                        # Port exposed outside the cluster
    targetPort: 8501                # Port Streamlit renders with chat UI that user interacts, the app listens on inside (check Dockerfile)
 selector:
  app: threatgpt                  # Link the Service to pods with label 'app: fastapi'
