OWASP-Driven-Threat-Detector/Builder-server/EKS/ingress.yaml
# *.tpl because Terraform will insert public subnet addresses in line 11
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: fastapi-ingress
 annotations:
  kubernetes.io/ingress.class: alb
  alb.ingress.kubernetes.io/scheme: internet-facing
  alb.ingress.kubernetes.io/target-type: ip
  alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  alb.ingress.kubernetes.io/subnets: subnet-03cbeae40811a199d, subnet-049ac68bbecd3419e
  alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
 rules:
  - host: myowaspproject3v401.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi-app
              port:
                number: 80
